--- a/Italbytz.Infrastructure.LinearProgramming/Italbytz.Infrastructure.LinearProgramming/Italbytz.Infrastructure.LinearProgramming.csproj
+++ b/Italbytz.Infrastructure.LinearProgramming/Italbytz.Infrastructure.LinearProgramming/Italbytz.Infrastructure.LinearProgramming.csproj
@@ -8,14 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LpSolveDotNet" Version="4.0.0" />
-      <PackageReference Include="LpSolveDotNet.Native.linux-x64" Version="4.0.0" />
-      <PackageReference Include="LpSolveDotNet.Native.linux-x86" Version="4.0.0" />
-      <PackageReference Include="LpSolveDotNet.Native.osx-x86" Version="4.0.0" />
-      <PackageReference Include="LpSolveDotNet.Native.win-x64" Version="4.0.0" />
-      <PackageReference Include="LpSolveDotNet.Native.win-x86" Version="4.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0"/>
+        <PackageReference Include="alglib.net" Version="3.19.0" />
     </ItemGroup>
 
 </Project>
